2010-07-27	The InnoDB Team

	* include/mem0pool.h, mem/mem0mem.c, mem/mem0pool.c, srv/srv0start.c:
	Fix Bug#55581 shutdown with innodb-use-sys-malloc=0: assert
	mutex->magic_n == MUTEX_MAGIC_N.

2010-06-30	The InnoDB Team

	* btr/btr0sea.c, ha/ha0ha.c, handler/ha_innodb.cc, include/btr0sea.h:
	Fix Bug#54311 Crash on CHECK PARTITION after concurrent LOAD DATA
	and adaptive_hash_index=OFF

2010-06-29	The InnoDB Team
	* row/row0row.c, row/row0undo.c, row/row0upd.c:
	Fix Bug#54408 txn rollback after recovery: row0umod.c:673
	dict_table_get_format(index->table)

2010-06-29	The InnoDB Team
	* row/row0row.c, row/row0undo.c, row/row0upd.c:
	Fix Bug#54408 txn rollback after recovery: row0umod.c:673
	dict_table_get_format(index->table)

2010-06-29	The InnoDB Team

	* btr/btr0cur.c, include/btr0cur.h,
	include/row0mysql.h, row/row0merge.c, row/row0sel.c:
	Fix Bug#54358 READ UNCOMMITTED access failure of off-page DYNAMIC
	or COMPRESSED columns

2010-06-24	The InnoDB Team

	* handler/ha_innodb.cc:
	Fix Bug#54679 alter table causes compressed row_format to revert
	to compact

2010-06-22	The InnoDB Team

	* handler/ha_innodb.cc, innodb_bug54044.test, innodb_bug54044.result
	Fix Bug#54044, Create temporary tables and using innodb crashes.

2010-06-22	The InnoDB Team

	* handler/ha_innodb.cc, innodb_bug54044.test, innodb_bug54044.result
	Fix Bug#54044, Create temporary tables and using innodb crashes.

2010-06-22	The InnoDB Team

	* dict/dict0dict.c, dict/dict0mem.c, include/dict0mem.h,
	include/univ.i, page/page0zip.c, row/row0merge.c:
	Fix Bug#47991 InnoDB Dictionary Cache memory usage increases
	indefinitely when renaming tables

2010-06-22	The InnoDB Team

	* handler/ha_innodb.cc:
	Fix Bug#54686: "field->col->mtype == type" assertion error at
	row/row0sel.c

2010-06-21	The InnoDB Team

	* dict/dict0load.c, fil/fil0fil.c:
	Fix Bug#54658: InnoDB: Warning: allocated tablespace %lu,
	old maximum was 0 (introduced in Bug #53578 fix)

2010-06-16	The InnoDB Team

	* row/row0merge.c: