@@ -8461,7 +8461,8 @@ ha_innobase::store_lock(
         && (sql_command == SQLCOM_INSERT_SELECT
             || sql_command == SQLCOM_REPLACE_SELECT
             || sql_command == SQLCOM_UPDATE
-            || sql_command == SQLCOM_CREATE_TABLE)) {
+            || sql_command == SQLCOM_CREATE_TABLE
+            || sql_command == SQLCOM_SET_OPTION)) {
 
       /* If we either have innobase_locks_unsafe_for_binlog
       option set or this session is using READ COMMITTED
@@ -8469,9 +8470,9 @@ ha_innobase::store_lock(
       is not set to serializable and MySQL is doing
       INSERT INTO...SELECT or REPLACE INTO...SELECT
       or UPDATE ... = (SELECT ...) or CREATE  ...
-      SELECT... without FOR UPDATE or IN SHARE
-      MODE in select, then we use consistent read
-      for select. */
+      SELECT... or SET ... = (SELECT ...) without
+      FOR UPDATE or IN SHARE MODE in select,
+      then we use consistent read for select. */
 
       prebuilt->select_lock_type = LOCK_NONE;
       prebuilt->stored_select_lock_type = LOCK_NONE;
